# py_jama_client

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  dependabot.yml
py_jama_client/: __init__.py  client.py  constants.py  core.py  exceptions.py  response.py
py_jama_client/apis/: __init__.py  abstract_items_api.py  activities_api.py  attachments_api.py  baselines_api.py  filters_api.py  item_types_api.py  items_api.py  pick_list_options_api.py  pick_lists_api.py  project_api.py  projects_api.py  relationships_api.py  releases_api.py  tags_api.py  test_cycles_api.py  test_plans_api.py  test_runs_api.py  user_api.py  users_api.py
test/: conftest.py  test_abstract_items_api.py  test_baselines_api.py  test_client_init.py  test_client_response.py  test_item_types.py  test_item_types_api.py  test_projects_api.py  test_relationships_api.py  test_releases_api.py  test_tags_api.py  test_users_api.py
